[gd_scene load_steps=49 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://sprites/Light2.png" type="Texture" id=2]
[ext_resource path="res://sprites/Living Room.png" type="Texture" id=3]
[ext_resource path="res://sprites/Ghost_360.png" type="Texture" id=4]
[ext_resource path="res://sprites/hand_on_the_table.png" type="Texture" id=5]
[ext_resource path="res://sprites/hand_holding_gun.png" type="Texture" id=6]
[ext_resource path="res://sprites/arms.png" type="Texture" id=7]
[ext_resource path="res://sprites/Caffe.png" type="Texture" id=8]
[ext_resource path="res://sprites/rain-Sheet.png" type="Texture" id=9]
[ext_resource path="res://sprites/Ghost_close.png" type="Texture" id=10]
[ext_resource path="res://sprites/Ghost_256.png" type="Texture" id=11]
[ext_resource path="res://sprites/Light.png" type="Texture" id=12]
[ext_resource path="res://sprites/ghost_128.png" type="Texture" id=13]
[ext_resource path="res://sprites/gun_on_the_table.png" type="Texture" id=14]
[ext_resource path="res://sprites/Texts/DonDon.png" type="Texture" id=15]
[ext_resource path="res://sprites/Texts/kikikikiki.png" type="Texture" id=16]
[ext_resource path="res://sprites/Texts/myak.png" type="Texture" id=17]
[ext_resource path="res://sprites/Texts/shii.png" type="Texture" id=18]
[ext_resource path="res://sprites/shoot.png" type="Texture" id=19]
[ext_resource path="res://sfx/Wind.ogg" type="AudioStream" id=20]
[ext_resource path="res://sfx/bang_01.ogg" type="AudioStream" id=21]
[ext_resource path="res://sfx/ghost.wav" type="AudioStream" id=22]
[ext_resource path="res://game.tres" type="Theme" id=23]
[ext_resource path="res://scenes/buttom.tres" type="DynamicFont" id=24]
[ext_resource path="res://fonts/DeathridgeDemo-8MyvJ.otf" type="DynamicFontData" id=25]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 440, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 880, 0, 440, 136 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 440, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 880, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 1320, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 1760, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 2200, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 2640, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 3080, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 9 )
region = Rect2( 3520, 0, 440, 136 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 9 )
region = Rect2( 3960, 0, 440, 136 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="Animation" id=16]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=17]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("arms_and_hands/arms:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("arms_and_hands/hand_on_the_table:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("arms_and_hands/hand_holding_gun:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("gun_on_the_table:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("arms_and_hands/Light2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 20.3333, -0.23, -10.8333, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.5, 1.6 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("arms_and_hands/Light2D:scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.5, 1.6 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("arms_and_hands/Light2D:scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.5, 1.6 )
}
tracks/8/type = "audio"
tracks/8/path = NodePath("SFX/bullet")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 21 )
} ],
"times": PoolRealArray( 1.3 )
}

[sub_resource type="Animation" id=23]
resource_name = "start"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "event1"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("texts/DonDon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texts/DonDon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texts/DonDon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 77.2736, 481.469 ), Vector2( 203.33, 378.008 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texts/DonDon:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 24.1103 ]
}

[sub_resource type="Animation" id=19]
resource_name = "event2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("texts/kikikikiki:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texts/kikikikiki:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texts/kikikikiki:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -94.3403, -79.6826 ), Vector2( 233.881, 212.862 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texts/kikikikiki:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -21.6785 ]
}

[sub_resource type="Animation" id=20]
resource_name = "event3"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("texts/myak:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texts/myak:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texts/myak:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 714.173, 520.01 ), Vector2( 714.173, 520.01 ), Vector2( 769.861, 556.822 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texts/myak:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.172144, 0.172144, -6.34017 ]
}

[sub_resource type="Animation" id=21]
resource_name = "event4"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("texts/shii:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texts/shii:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ), Vector2( 649.798, 217.101 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texts/shii:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.8128, 0.84084, -5.70396, 2.58248, -1.53571, 4.30629, -4.89507, 0.650749, -10.4337, -1.8055, -10.5986, -1.02854, -6.73224, -2.57781, -10.467 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texts/shii:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=22]
size = 42
font_data = ExtResource( 25 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="Living Room" type="Sprite" parent="."]
position = Vector2( 400, 300 )
texture = ExtResource( 3 )

[node name="gun_on_the_table" type="Sprite" parent="."]
position = Vector2( 452.622, 473.054 )
texture = ExtResource( 14 )

[node name="Animation" type="Node2D" parent="."]

[node name="Animated_caffe" type="AnimatedSprite" parent="Animation"]
position = Vector2( 400, 184 )
scale = Vector2( 1, 1.02 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="Animated_rain" type="AnimatedSprite" parent="Animation"]
position = Vector2( 400, 184 )
scale = Vector2( 1, 1.02 )
frames = SubResource( 15 )
frame = 3
playing = true

[node name="Ghosts" type="Node2D" parent="."]

[node name="ghost_128" type="Sprite" parent="Ghosts"]
visible = false
position = Vector2( 228.329, 192.557 )
texture = ExtResource( 13 )

[node name="Ghost_256" type="Sprite" parent="Ghosts"]
visible = false
position = Vector2( 631.38, 225.791 )
texture = ExtResource( 11 )

[node name="Ghost_close" type="Sprite" parent="Ghosts"]
visible = false
position = Vector2( 413.591, 235.691 )
texture = ExtResource( 10 )

[node name="Ghost_360" type="Sprite" parent="Ghosts"]
visible = false
position = Vector2( 103.171, 251.954 )
texture = ExtResource( 4 )

[node name="arms_and_hands" type="Node2D" parent="."]

[node name="hand_holding_gun" type="Sprite" parent="arms_and_hands"]
visible = false
position = Vector2( 286.409, 455.354 )
texture = ExtResource( 6 )

[node name="hand_on_the_table" type="Sprite" parent="arms_and_hands"]
visible = false
position = Vector2( 388, 550 )
texture = ExtResource( 5 )

[node name="arms" type="Sprite" parent="arms_and_hands"]
position = Vector2( 400, 490 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="arms_and_hands"]
position = Vector2( 399.949, 339.1 )
texture = ExtResource( 19 )
energy = 0.0

[node name="room_light" type="Light2D" parent="."]
position = Vector2( 403.77, 303.693 )
scale = Vector2( 1.82399, 4.41092 )
texture = ExtResource( 12 )
energy = 0.0
mode = 2

[node name="screen_light" type="Light2D" parent="."]
position = Vector2( 398.216, 183.046 )
scale = Vector2( 0.903027, 1.23508 )
texture = ExtResource( 2 )
energy = 0.7

[node name="Timers" type="Node" parent="."]

[node name="timer_lights" type="Timer" parent="Timers"]
pause_mode = 2
process_mode = 0
wait_time = 0.3
autostart = true

[node name="timer_arms" type="Timer" parent="Timers"]
wait_time = 0.2
autostart = true

[node name="timer_animation" type="Timer" parent="Timers"]
wait_time = 4.0
autostart = true

[node name="ghost_hide" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="points_timer" type="Timer" parent="Timers"]
wait_time = 0.05

[node name="text_timers" type="Timer" parent="Timers"]
wait_time = 6.0
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 228.258
margin_top = 126.81
margin_right = 284.258
margin_bottom = 157.81
text = "XXXXXXX
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="."]
anims/die = SubResource( 16 )
anims/shoot = SubResource( 17 )
anims/start = SubResource( 23 )

[node name="texts" type="Node2D" parent="."]

[node name="DonDon" type="Sprite" parent="texts"]
visible = false
modulate = Color( 1, 1, 1, 0.722222 )
position = Vector2( 131.898, 436.636 )
rotation = 0.182348
texture = ExtResource( 15 )

[node name="myak" type="Sprite" parent="texts"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 769.861, 556.822 )
rotation = -0.110657
texture = ExtResource( 17 )

[node name="shii" type="Sprite" parent="texts"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 649.798, 217.101 )
texture = ExtResource( 18 )

[node name="kikikikiki" type="Sprite" parent="texts"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 233.881, 212.862 )
rotation = -0.378361
texture = ExtResource( 16 )

[node name="texts_anim" type="AnimationPlayer" parent="."]
anims/event1 = SubResource( 18 )
anims/event2 = SubResource( 19 )
anims/event3 = SubResource( 20 )
anims/event4 = SubResource( 21 )

[node name="SFX" type="Node" parent="."]

[node name="bullet" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 21 )

[node name="ghost" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 22 )

[node name="menacing" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 20 )

[node name="Leaderboard" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Leaderboard"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Leaderboard/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="Leaderboard/Control/MarginContainer"]
visible = true
margin_right = 640.0
margin_bottom = 440.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vgrid" type="VBoxContainer" parent="Leaderboard/Control/MarginContainer/PopupPanel"]
margin_right = 640.0
margin_bottom = 440.0
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfor" type="HBoxContainer" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid"]
margin_top = 198.0
margin_right = 640.0
margin_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1

[node name="Name" type="Label" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid/PlayerInfor"]
margin_right = 80.0
margin_bottom = 44.0
text = "Name"

[node name="LineEdit" type="LineEdit" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid/PlayerInfor"]
margin_left = 90.0
margin_top = 3.0
margin_right = 360.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_length = 10

[node name="Ok" type="Button" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid/PlayerInfor"]
margin_left = 370.0
margin_right = 640.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 24 )
text = "ok"

[node name="Pos1" type="Label" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid"]
visible = false
margin_top = 222.0
margin_right = 640.0
margin_bottom = 266.0
text = "place holder and points"
align = 1
autowrap = true

[node name="Pos2" type="Label" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid"]
visible = false
margin_top = 198.0
margin_right = 640.0
margin_bottom = 242.0
text = "place holder and points"
align = 1
autowrap = true

[node name="Pos3" type="Label" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid"]
visible = false
margin_top = 247.0
margin_right = 640.0
margin_bottom = 291.0
text = "place holder and points"
align = 1
autowrap = true

[node name="Pos4" type="Label" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid"]
visible = false
margin_top = 271.0
margin_right = 640.0
margin_bottom = 315.0
text = "place holder and points"
align = 1
autowrap = true

[node name="Pos5" type="Label" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid"]
visible = false
margin_top = 222.0
margin_right = 640.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 876.432, -481.34 )
text = "place holder and points"
align = 1
autowrap = true

[node name="Button" type="Button" parent="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid"]
visible = false
margin_left = 300.0
margin_top = 330.0
margin_right = 339.0
margin_bottom = 354.0
focus_mode = 1
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 24 )
disabled = true
shortcut_in_tooltip = false
text = "Replay"

[node name="Press_space" type="Label" parent="."]
visible = false
margin_left = 200.0
margin_top = 533.854
margin_right = 552.0
margin_bottom = 577.854
custom_fonts/font = SubResource( 22 )
custom_colors/font_color = Color( 0, 0.368627, 1, 1 )
text = "PRESS SPACE!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timers/timer_lights" to="." method="_on_timer_lights_timeout"]
[connection signal="timeout" from="Timers/timer_arms" to="." method="_on_timer_arms_timeout"]
[connection signal="timeout" from="Timers/timer_animation" to="." method="_on_timer_animation_timeout"]
[connection signal="timeout" from="Timers/ghost_hide" to="." method="_on_ghost_hide_timeout"]
[connection signal="timeout" from="Timers/points_timer" to="." method="_on_points_timer_timeout"]
[connection signal="timeout" from="Timers/text_timers" to="." method="_on_text_timers_timeout"]
[connection signal="pressed" from="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid/PlayerInfor/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="Leaderboard/Control/MarginContainer/PopupPanel/Vgrid/Button" to="." method="_on_Button_pressed"]
